Rate Limiter (resilience4j)

--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -49,6 +49,14 @@ resilience4j:
         max-attempts: 3
         wait-duration: 5s
 
+  ratelimiter:
+    instances:
+      userRatingLimiter:
+        limit-refresh-period: 5s
+        limit-for-period: 2
+        timeout-duration: 0s
+
+
 
 
 
